fix for snow effect on mobile

--- a/public/css/snow-style.css
+++ b/public/css/snow-style.css
@@ -3,8 +3,10 @@
   position: fixed;
   top: 0;
   left: 0;
+  right: 0;
+  bottom: 0;
   width: 100%;
-  height: 100%;
+  height: auto;
   pointer-events: none;
   z-index: 1;
   display: none;
